# ctpToMmoran

./: CMakeLists.txt  README.md  ctpgame.cpp  main.cpp  moran.cpp  moran.hpp  population.cpp  population.hpp  state.cpp  state.hpp  strategy.cpp  strategy.hpp
results/EDFig8/: actionanalytical.csv  avgaction0.csv  avgaction0001.csv  avgaction001.csv  avgbelief0.csv  avgbelief0001.csv  avgbelief001.csv  avglevel0.csv  avglevel0001.csv  avglevel001.csv  avgmisbelief0.csv  avgmisbelief0001.csv  avgmisbelief001.csv  beliefanalytical.csv  levelanalytical.csv  misbeliefanalytical.csv  plotDecperK.R  plotMBperK.R  plotOneLevel.R  plotSingleStrat.R
results/FigS8/: actionanalytical.csv  avgaction00001.csv  avgaction0001.csv  avgaction001.csv  avgbelief00001.csv  avgbelief0001.csv  avgbelief001.csv  avglevel00001.csv  avglevel0001.csv  avglevel001.csv  avgmisbelief00001.csv  avgmisbelief0001.csv  avgmisbelief001.csv  beliefanalytical.csv  levelanalytical.csv  misbeliefanalytical.csv  plotbeliefs.R  plotdecisions.R  plotlevels.R  plotmisbeliefs.R
